crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__44_refinement_xfield_self_reference.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<PARSE_FAILED: ["T218"]>
