crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__45_refinement_xfield_non_i64_rhs.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T219"]>
