crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__47_variant_refinement_fail.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T220"]>
