crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__48_variant_refinement_positional_fails_parse.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<PARSE_FAILED: ["P001", "T223"]>
