crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__50_variant_narrowing_nested_match.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [
            LiteralFits {
                clause: RefinementClause {
                    field: "x",
                    op: Gt,
                    rhs: Literal(
                        0,
                    ),
                    span: Span {
                        start: 1613,
                        end: 1624,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                value: Narrow(
                    3,
                ),
                site: Span {
                    start: 1732,
                    end: 1743,
                    source: SourceId(
                        4294967295,
                    ),
                },
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "T220",
                    ),
                    severity: Error,
                    message: "variant `SignedInt::Positive` construction violates refinement: payload field `x` supplied with literal `3`, but predicate `x > 0` is refutable",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1732,
                            end: 1743,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
                on_timeout: Diagnostic {
                    code: DiagnosticCode(
                        "T220",
                    ),
                    severity: Error,
                    message: "Z3 timed out within rlimit budget discharging variant `SignedInt::Positive` refinement on payload field `x` against literal `3`",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1732,
                            end: 1743,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
            LiteralFits {
                clause: RefinementClause {
                    field: "x",
                    op: Gt,
                    rhs: Literal(
                        0,
                    ),
                    span: Span {
                        start: 1613,
                        end: 1624,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                value: Narrow(
                    11,
                ),
                site: Span {
                    start: 1772,
                    end: 1784,
                    source: SourceId(
                        4294967295,
                    ),
                },
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "T220",
                    ),
                    severity: Error,
                    message: "variant `SignedInt::Positive` construction violates refinement: payload field `x` supplied with literal `11`, but predicate `x > 0` is refutable",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1772,
                            end: 1784,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
                on_timeout: Diagnostic {
                    code: DiagnosticCode(
                        "T220",
                    ),
                    severity: Error,
                    message: "Z3 timed out within rlimit budget discharging variant `SignedInt::Positive` refinement on payload field `x` against literal `11`",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1772,
                            end: 1784,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [],
    },
}
