crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__52_fn_param_refinement_pass.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [
            LiteralFits {
                clause: RefinementClause {
                    field: "x",
                    op: Gt,
                    rhs: Literal(
                        0,
                    ),
                    span: Span {
                        start: 1226,
                        end: 1237,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                value: Narrow(
                    5,
                ),
                site: Span {
                    start: 1333,
                    end: 1344,
                    source: SourceId(
                        4294967295,
                    ),
                },
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "T224",
                    ),
                    severity: Error,
                    message: "function `validate` call-site violates parameter refinement: argument #1 (param `x`) supplied with literal `5`, but predicate `x > 0` is refutable",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1333,
                            end: 1344,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
                on_timeout: Diagnostic {
                    code: DiagnosticCode(
                        "T224",
                    ),
                    severity: Error,
                    message: "Z3 timed out within rlimit budget discharging function `validate` call-site refinement on argument #1 (param `x`) against literal `5`",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1333,
                            end: 1344,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [],
    },
}
