crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__53_fn_param_refinement_fail.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T224"]>
