crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__54_fn_return_refinement_pass.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: "&result"
---
WorkloadResult {
    refine_diags: [],
    refine_workload: RefinementWorkload {
        obligations: [
            LiteralFits {
                clause: RefinementClause {
                    field: "@",
                    op: Gt,
                    rhs: Literal(
                        0,
                    ),
                    span: Span {
                        start: 1021,
                        end: 1032,
                        source: SourceId(
                            4294967295,
                        ),
                    },
                },
                value: Narrow(
                    5,
                ),
                site: Span {
                    start: 1039,
                    end: 1048,
                    source: SourceId(
                        4294967295,
                    ),
                },
                on_violated: Diagnostic {
                    code: DiagnosticCode(
                        "T225",
                    ),
                    severity: Error,
                    message: "function body return statement violates declared return refinement: returned literal `5` against predicate `@ > 0`",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1039,
                            end: 1048,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
                on_timeout: Diagnostic {
                    code: DiagnosticCode(
                        "T225",
                    ),
                    severity: Error,
                    message: "Z3 timed out within rlimit budget while discharging return refinement on literal `5`",
                    hint: None,
                    span: Some(
                        Span {
                            start: 1039,
                            end: 1048,
                            source: SourceId(
                                4294967295,
                            ),
                        },
                    ),
                    source_name: None,
                    suggested_edits: None,
                },
            },
        ],
    },
    cap_diags: [],
    cap_workload: AirCapabilityWorkload {
        obligations: [],
    },
}
