crates/sigil-compiler/tests/snapshots/workload_snapshots__z3__55_fn_return_refinement_fail.snap
---
source: crates/sigil-compiler/tests/workload_snapshots.rs
expression: summary
---
<TYPE_CHECK_FAILED: ["T225"]>
